--- a/app/src/main/res/menu/menu_form.xml
+++ b/app/src/main/res/menu/menu_form.xml
@@ -6,4 +6,9 @@
         android:icon="@drawable/ic_clear"
         android:title="@string/delete"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_change_settings"
+        android:title="@string/change_language_settings"
+        android:icon="@drawable/ic_baseline_settings_24"
+        app:showAsAction="ifRoom"/>
 </menu>
