--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -3,24 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_item_note"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="4dp"
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="0dp"
         app:cardMaxElevation="4dp"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="false"
+        app:contentPadding="10dp"
+        android:layout_marginTop="10dp"
+
+        app:rippleColor="#B0B6CA">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="5dp">
 
             <TextView
                 android:id="@+id/tv_item_date"
@@ -38,6 +45,7 @@
                 android:layout_marginBottom="4dp"
                 android:gravity="start"
                 android:text="@string/title"
+                android:textColor="#000000"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
